# gnc_calcs

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/routers/: gnc.py
backend/app/schemas/: gnc.py
backend/app/services/gnc/: __init__.py  attitude_dynamics.py  orbital_dynamics.py  quaternion.py  relative_motion.py  trajectory.py
backend/notebooks/: gnc_attitude_dynamics.ipynb
backend/tests/: __init__.py  conftest.py  test_api.py  test_attitude_dynamics.py  test_orbital_dynamics.py  test_quaternion.py  test_relative_motion.py  test_trajectory.py
frontend/: Dockerfile.dev  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: gnc.ts  types.ts
frontend/src/components/: TrajectoryPlot.module.css  TrajectoryPlot.tsx
frontend/src/components/cards/: AttitudeDynamicsCard.tsx  CalculationCard.module.css  GncCard.module.css  GncCard.tsx  OrbitalMotionCard.tsx  QuaternionAttitudeCard.module.css  QuaternionAttitudeCard.tsx  RelativeMotionCard.tsx  index.ts
frontend/src/pages/: Dashboard.module.css  Dashboard.tsx
frontend/src/theme/: theme.ts
